; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serial/extr_kgdb_nmi.c_kgdb_nmi_tty_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serial/extr_kgdb_nmi.c_kgdb_nmi_tty_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { %struct.kgdb_nmi_tty_priv* }
%struct.kgdb_nmi_tty_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tty_struct*)* @kgdb_nmi_tty_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kgdb_nmi_tty_cleanup(%struct.tty_struct* %0) #0 {
  %2 = alloca %struct.tty_struct*, align 8
  %3 = alloca %struct.kgdb_nmi_tty_priv*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %2, align 8
  %4 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %5 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %4, i32 0, i32 0
  %6 = load %struct.kgdb_nmi_tty_priv*, %struct.kgdb_nmi_tty_priv** %5, align 8
  store %struct.kgdb_nmi_tty_priv* %6, %struct.kgdb_nmi_tty_priv** %3, align 8
  %7 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %8 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %7, i32 0, i32 0
  store %struct.kgdb_nmi_tty_priv* null, %struct.kgdb_nmi_tty_priv** %8, align 8
  %9 = load %struct.kgdb_nmi_tty_priv*, %struct.kgdb_nmi_tty_priv** %3, align 8
  %10 = getelementptr inbounds %struct.kgdb_nmi_tty_priv, %struct.kgdb_nmi_tty_priv* %9, i32 0, i32 0
  %11 = call i32 @tty_port_destroy(i32* %10)
  %12 = load %struct.kgdb_nmi_tty_priv*, %struct.kgdb_nmi_tty_priv** %3, align 8
  %13 = call i32 @kfree(%struct.kgdb_nmi_tty_priv* %12)
  ret void
}

declare dso_local i32 @tty_port_destroy(i32*) #1

declare dso_local i32 @kfree(%struct.kgdb_nmi_tty_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
